# prismflow

./: .env.example  .gitignore  CODEBASE_NOTES.md  MID_LEVEL_AI_ENGINEER_EVALUATION.md  Makefile  PRODUCTION_AI_ENGINEERING.md  README.md  START.md  docker-compose.dev.yml  docker-compose.yml  pyrightconfig.json
apps/agent-service/: Dockerfile  pyproject.toml
apps/agent-service/src/: config.py  main.py
apps/eval-harness/: Dockerfile  pyproject.toml
apps/eval-harness/src/: config.py  main.py
apps/llm-gateway/: Dockerfile  pyproject.toml
apps/llm-gateway/src/: __init__.py  config.py  main.py
apps/llm-gateway/src/models/: __init__.py  schemas.py
apps/llm-gateway/src/routes/: __init__.py  chat.py
apps/portal/: Dockerfile  README_COMPONENTS.md  next.config.js  package-lock.json  package.json  tailwind.config.js
apps/portal/app/: globals.css  layout.tsx  page.tsx
apps/portal/app/agent-service/: page.tsx
apps/portal/app/chat/: page.tsx
apps/portal/app/eval-harness/: page.tsx
apps/portal/app/llm-gateway/: page.tsx
apps/portal/app/rag-service/: page.tsx
apps/portal/components/: README.md
apps/portal/components/animations/: FadeIn.tsx  FadeInOnScroll.tsx  Parallax.tsx  Pulse.tsx  Shimmer.tsx  SlideUp.tsx  StaggerChildren.tsx  index.ts
apps/portal/components/charts/: CostChart.tsx  LatencyGraph.tsx  ScoreBar.tsx  TrendChart.tsx  index.ts
apps/portal/styles/: ripple.css
apps/rag-service/: Dockerfile  pyproject.toml
apps/rag-service/src/: config.py  main.py
apps/rag-service/src/models/: __init__.py
apps/rag-service/src/routes/: __init__.py
(+14 files in other folders)
